// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BoardItem /> test basic rendering with image 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-container"
    data-testid="button-tag"
  >
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <img
        alt="IMAGE_OF_PRODUCT"
        class="makeStyles-image-135"
        data-testid="image-tag"
        src="http://www.someimage.com"
      />
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column MuiGrid-align-content-xs-flex-end MuiGrid-justify-xs-space-between"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
        >
          <p
            class="MuiTypography-root MuiTypography-body1"
            data-testid="title-tag"
          >
            board-item-title
          </p>
          <p
            class="MuiTypography-root MuiTypography-h6"
            data-testid="price-tag"
          >
            US $12.00
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<BoardItem /> test basic rendering without image 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-container"
    data-testid="button-tag"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column MuiGrid-align-content-xs-flex-end MuiGrid-justify-xs-space-between"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
        >
          <p
            class="MuiTypography-root MuiTypography-body1"
            data-testid="title-tag"
          >
            board-item-title
          </p>
          <p
            class="MuiTypography-root MuiTypography-h6"
            data-testid="price-tag"
          >
            US $12.00
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
